Small fix to the map edges' overflow behavior

--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,14 @@
   transition: width 2s;
   margin: 0px;
   border: 1px solid red;
-  overflow: hidden;
+  overflow-x: hidden;
 }
+
 #my-map {
   width: 140%;
   height: 100%;
   margin: 0 auto;
   margin-bottom: 40px; 
-
-}
-#my-map {
-  width: 100%;
-  height: 600px;
 }
 
 #controls {
